[package]
name = "volt_i2c"
version = "1.2.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = { version = "0.5.1"}
#tokio = { version = "1", features = ["full"] }
clap = { version = "2.33" }
syslog = { version = "5" }
log = { version = "0.4" }
#evdev = { version = "0.11.0", features= [ "tokio" ]}

[dependencies.evdev]
features= [ "tokio" ]
version = "<= 0.11.6"

[dependencies.paho-mqtt]
#git = "https://github.com/eclipse/paho.mqtt.rust.git"
#branch = "master"
version = "0.9.1"
#features = [ "ssl" ]
default-features = false
features = [ "bundled" ]

[dependencies.tokio]
version = "<= 1.11"
features = [
  #"fs",
  #"io-util",
  #"io-std",
  "macros",
  #"net",
  #"parking_lot",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
]

[profile.release]
opt-level = 2
#lto = true
#codegen-units = 1
#panic = "abort"
